--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #ffffff;
     margin: 0;
-    padding: 20px;
+    padding: opx;
 }
 
 .box1 {
@@ -14,8 +14,21 @@ body {
     margin: auto;
     transition: transform 0.3s;
 }
+.box2 {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px hsla(9, 100%, 64%, 0);
+    max-width: 600px;
+    margin: auto;
+    transition: transform 0.3s;
+}
 
 .box1:hover {
+    transform: scale(1.02);
+}
+
+.box2:hover {
     transform: scale(1.02);
 }
 
@@ -34,12 +47,20 @@ body {
     transform: scale(1.05);
 }
 
+.‎gtwImgs {
+    width: 80%;
+    padding: 10px;
+    margin-bottom: 0px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+}
+
 .inp {
     width: 80%;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 20px;
 }
 
 .btn1, .btn2 {
@@ -130,6 +151,6 @@ body {
     }
 
     .inp {
-        width: 95%;
+        width: 90%;
     }
 }
