--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -72,7 +72,7 @@ width: 70%;
 .btn1, .btn2 {
     padding: 10px 15px;
     border-radius: 5px;
-    border: none;
+    border: 1px solid #ccc;
     cursor: pointer;
     transition: background 0.3s, transform 0.3s;
 }
