--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -69,6 +69,7 @@ margin: auto;
     margin-bottom: 0px;
     border: 1px solid #ccc;
     border-radius: 0px;
+    margin: auto;
 }
 
 .btn1, .btn2 {
