--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -46,7 +46,7 @@ body {
 
 .cpb {
     background-color: #f8f8f8;
-    color: black;
+    color:DeepSkyBlue;
     border: none;
     padding: 1px 2px;
     border-radius: 1px;
