--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -47,7 +47,7 @@ body {
 .cpb {
     background-color: #f8f8f8;
     color:DeepSkyBlue;
-    border: none;
+    border: 12px #00BFFF
     padding: 1px 2px;
     border-radius: 1px;
     cursor: pointer;
