--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    height: 20px;
+    height: 30px;
     width: 100%;
     background-color: #ffffff;
     margin: 0;
@@ -47,6 +47,8 @@ body {
 .cpb {
     background-color: #f8f8f8;
     color:DeepSkyBlue;
+    width:  200%;
+    height: 20px;
     border: 1px solid #00BFFF;
     padding: 1px 1px;
     border-radius: 1px;
