--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -3,7 +3,7 @@ body {
     height: 30px;
     width: 100%;
     background-color: #ffffff;
-    margin: 0;
+    margin: auto;
     padding: opx;
 }
     img {
