--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -47,6 +47,13 @@ body {
     background-color: #f8f8f8;
     transform: scale(1.05);
 }
+.a1 {
+    background-color: #f8f8f8;
+    color:DeepSkyBlue;
+    width:  100%;
+    height: 50px;
+    border: 1px solid #00BFFF;
+    padding: 1px 1px;
 
 .‎gtwImgs {
     width: 200%;
