--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -54,7 +54,7 @@ body {
     height: 50px;
     border: 1px solid #00BFFF;
     padding: 1px 1px;
-
+}
 .‎gtwImgs {
     width: 200%;
     padding: 1px;
