--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -48,7 +48,7 @@ body {
     transform: scale(1.05);
 }
 .a1 {
-    background-color: #f8f8f8;
+    background-color: #ffffff;
     color:DeepSkyBlue;
 }
 .‎gtwImgs {
