--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     height: 20px;
     width: 100%;
-    background-color: #ffffff;
+    background-color: #F8F9F9;
     margin: auto;
     padding: opx;
 }
