--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -4,11 +4,11 @@ body {
     width: 100%;
     background-color: #F8F9F9;
     margin: auto;
-    padding: opx;
+    padding: 20px;
 }
 
 .box1 {
-    background-color: #ffffff;
+    background-color: #F8F9F9;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 10px hsla(9, 100%, 64%, 0);
