--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Gill Sans,sans-serif;
+    font-family: Arial,sans-serif;
     height: 20px;
     width: 100%;
     background-color: #F8F9F9;
