--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial,sans-serif;
-    height: 20px;
+    height: auto;
     width: 100%;
     background-color: #F8F9F9;
     margin: auto;
