--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial,sans-serif;
     height: auto;
-    width: 100%;
+    width: auto;
     background-color: #F8F9F9;
     margin: auto;
     padding: 0px;
