--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -17,6 +17,15 @@ h1 h2 h3 h4 h5 h6{
   font-size: 12px;
 }
 
+.rdaacls{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 10px;
+  width: 105px;
+  background-color: #eee;
+  border-radius: 50%;
+}
 
 .box1 {
     background-color: #FDFEFE;
