--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -17,14 +17,6 @@ h1 h2 h3 h4 h5 h6{
   font-size: 12px;
 }
 
-.rdaacls{
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 10px;
-  width: 105px;
-  background-color: #eee;
-  border-radius: 50%;
 }
 
 .box1 {
@@ -61,8 +53,8 @@ h1 h2 h3 h4 h5 h6{
 .a1 {
     background-color: #FDFEFE;
     color:DeepSkyBlue;
-    font-size: 16px;
-    text-align: center;
+    font-size: 12px;
+    text-align: left;
 }
 
 .inp {
