--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -4,22 +4,22 @@ body {
     width: auto;
     background-color: #FDFEFE;
     margin: auto;
-    padding: 0px;
+    padding: 5px;
 }
 
 p {
   font-weight: bold;
-  font-size: 12px;
+  font-size: 10px;
 }
 
 h1 h2 h3 h4 h5 h6{
   font-weight: bold;
-  font-size: 12px;
+  font-size: 10px;
 }
 
 }
 
-.box1 {
+box1 {
     background-color: #FDFEFE;
     padding: 20px;
     border-radius: 10px;
