--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -113,13 +113,13 @@ box1 {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color:none;
 }
 
 .modal-content {
     background-color: #ffffff;
     margin: 15% auto;
-    padding: 0px;
+    padding: 20px;
     border: 1px solid #F8F9F9;
     width: 80%;
     max-width: 400px;
