--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -113,14 +113,14 @@ box1 {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color:none;
+    background-color:rgba(0,0,0,0);
 }
 
 .modal-content {
     background-color: #ffffff;
     margin: 15% auto;
     padding: 20px;
-    border: 1px solid #F8F9F9;
+    border: 1px solid #000000;
     width: 80%;
     max-width: 400px;
     border-radius: 10px;
@@ -128,7 +128,7 @@ box1 {
 }
 
 .modal-text {
-    color: #002aff;
+    color: #000000;
     font-size: 10px;
     text-align: center;
 }
@@ -151,7 +151,7 @@ box1 {
     to {opacity: 1;}
 }
 
-@media only screen and (max-width: 400px) 
+@media only screen and (max-width: 600px) 
     .box1 {
         padding: 15px;
     }
