--- a/repayyx.payxfast.com/styles.css
+++ b/repayyx.payxfast.com/styles.css
@@ -113,7 +113,7 @@ box1 {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color:rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-content {
@@ -129,14 +129,14 @@ box1 {
 
 .modal-text {
     color: #000000;
-    font-size: 10px;
+    font-size: 16px;
     text-align: center;
 }
 
 .close {
     color: black;
     float: right;
-    font-size: 20px;
+    font-size: 28px;
     font-weight: bold;
 }
 
